force-app/main/default/objects/Property_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Take_Out_Strategy_Description__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>If there is a take-out strategy defined at a more detailed level than indicated in the Take Out Strategy field, please describe in full here.</inlineHelpText>
        <label>Take Out Strategy Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Take_Out_Strategy__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>Select the current take out strategy for this property or interest and describe in the description field.</inlineHelpText>
        <label>Take Out Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Holding Long Term</fullName>
                </value>
                <value>
                    <fullName>TNC Holding Short Term</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Land Trust</fullName>
                </value>
                <value>
                    <fullName>Transferring to Local Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to State Agency</fullName>
                </value>
                <value>
                    <fullName>Transferring to Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Conservation Buyer Sale</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tract_Acres__c</fullName>
        <inlineHelpText>Enter the total number of acres that this interest covers.</inlineHelpText>
        <label>Tract Acres</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tract_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Moved from PMU level 4/11/17</description>
        <inlineHelpText>Does TNC have a survey of the property? If so, please check and attach a copy of the survey to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>Tract Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Crop__c</fullName>
        <inlineHelpText>Select the crop type(s) allowed under the lease.</inlineHelpText>
        <label>Type of Crop</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Almonds</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Berries</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Prunes</fullName>
                </value>
                <value>
                    <fullName>Rice</fullName>
                </value>
                <value>
                    <fullName>Row crops</fullName>
                </value>
                <value>
                    <fullName>Walnuts</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Lease__c</fullName>
        <description>Kept for easements and deed restrictions since we do not have a lease contract.</description>
        <inlineHelpText>Select the type of lease(s) on the property if known.</inlineHelpText>
        <label>Xdeprecated: Type of Lease</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural</fullName>
                </value>
                <value>
                    <fullName>Federal Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Horses</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>State Grazing Allotment</fullName>
                </value>
                <value>
                    <fullName>Tenants</fullName>
                </value>
                <value>
                    <fullName>Timber</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_Monitoring_Photos__c</fullName>
        <formula>HYPERLINK(&quot;/_ui/search/ui/UnifiedSearchResults?offset=0&amp;str=&quot;&amp;SUBSTITUTE(Short_Name__c, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;sen=&amp;sen=&amp;fen=a3e&amp;initialViewMode=detail&amp;00Na000000B8sZXEAZPhoto__c=&quot;&amp;SUBSTITUTE(Name, &quot; &quot;, &quot;%20&quot;)&amp;&quot;&amp;sFltrFields=00Na000000B8sZXEAZPhoto__c%2C&quot;, &quot;Click Here (Desktop Only)&quot;, &quot;target=_blank&quot;)</formula>
        <inlineHelpText>Click this link to view all of the easement/deed restriction monitoring photos associated with this Property Interest.</inlineHelpText>
        <label>View Monitoring Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Welfare_Exemption_Explanation__c</fullName>
        <description>Moved from PMU 3/1/17</description>
        <inlineHelpText>If you indicated that a welfare exemption was not applied for, please explain the reasons here.</inlineHelpText>
        <label>Welfare Exemption Explanation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Williamson_Act_Applied_for__c</fullName>
        <inlineHelpText>The Williamson Act is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use.</inlineHelpText>
        <label>Williamson Act Applied for?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Williamson_Act_Details__c</fullName>
        <description>The Williamson Act of the US state of California (officially, the California Land Conservation Act of 1965) is a California law that provides relief of property tax to owners of farmland and open-space land in exchange for a ten-year agreement that the land will not be developed or otherwise converted to another use.</description>
        <inlineHelpText>Please describe the terms of the Williamson Act contract, including permitted and compatible uses. If TNC plans to put the property under a Williamson Act contract, attach a copy of the application to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>Williamson Act Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1026A_Determination_Information__c</fullName>
        <description>A 1026A shows the determination from the local county FSA office as to whether or not the property includes highly erodible land or wetlands. TNC must be in compliance with these determinations to receive any USDA program benefits.</description>
        <inlineHelpText>If TNC has a determination show the results here. If not, indicate the date the determination was requested.</inlineHelpText>
        <label>1026A Determination Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1026A_Determination_for_the_Property__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The 1026A is the Highly Erodible Land (HEL) and Wetlands determination form. Does TNC have a 1026A from the FSA?  If “yes,&quot; check the box.</inlineHelpText>
        <label>1026A Determination for the Property?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zoom_Level__c</fullName>
        <formula>IF(Distance__c &gt; 13, &quot;11&quot;,IF(Distance__c &gt; 5, &quot;12&quot;,IF(Distance__c &gt; 3, &quot;13&quot;,IF(Distance__c &gt; 2, &quot;14&quot;,IF(Distance__c &lt; 2, &quot;15&quot;, &quot;12&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zoom level when opening up the atlas. Calculated based on the distance formula.</inlineHelpText>
        <label>Zoom Level</label>
        <type>Text</type>
    </fields>
    <label>Property Interest</label>
    <listViews>
        <fullName>Active_Easements_DRs</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Tract_Acres__c</columns>
        <columns>Ownership_Status__c</columns>
        <columns>TNC_Interest_Book_Value__c</columns>
        <columns>Date_Acquired__c</columns>
        <columns>County_Global__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Easement,Property_Interest__c.Deed_Restriction</value>
        </filters>
        <filters>
            <field>Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Held Easement or Deed Restriction,Easement Held by non-TNC Entity</value>
        </filters>
        <label>Active Easement and Deed Restrictions</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Property_Interest_Group__c</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Tract_Acres__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fee_Interests</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>NAME</columns>
        <columns>Date_Acquired__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>County_Global__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Fee</value>
        </filters>
        <filters>
            <field>Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee</value>
        </filters>
        <label>Fee Interests</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Historic_Easements</fullName>
        <columns>NAME</columns>
        <columns>County_Global__c</columns>
        <columns>Date_Acquired__c</columns>
        <columns>Date_Interest_Transferred_Out__c</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Last_Monitoring_Date__c</columns>
        <columns>Property_Contacts__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Easement</value>
        </filters>
        <filters>
            <field>Ownership_Status__c</field>
            <operation>equals</operation>
            <value>Formerly TNC Held Easement</value>
        </filters>
        <label>Historic Easements</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Historic_Fee_Interests</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>NAME</columns>
        <columns>Date_Acquired__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>County_Global__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Fee</value>
        </filters>
        <filters>
            <field>Ownership_Status__c</field>
            <operation>equals</operation>
            <value>Formerly TNC Owned Fee</value>
        </filters>
        <label>Historic Fee Interests</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Historic_Partial_Interests</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Monitor_Assigned__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>County_Global__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Monitoring_Required__c</field>
            <operation>equals</operation>
            <value>None</value>
        </filters>
        <label>Non-Reportable Partial Interests</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mineral_and_Water</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>County_Global__c</columns>
        <columns>TNC_Interest_Book_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Mineral,Property_Interest__c.Other_Rights</value>
        </filters>
        <label>Mineral and Water</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Interest_Assignments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>County_Global__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>Monitoring_Due_Date__c</columns>
        <columns>Monitoring_Required__c</columns>
        <columns>Monitor_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Monitoring_Assignments__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Monitoring_Required__c</field>
            <operation>equals</operation>
            <value>SOP,CA</value>
        </filters>
        <label>My Interest Assignments</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Reportable_Easements</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Monitor_Assigned__c</columns>
        <columns>Monitoring_Due_Date__c</columns>
        <columns>IRS_Reportable__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>County_Global__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ownership_Status__c</columns>
        <columns>Monitoring_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.Easement</value>
        </filters>
        <filters>
            <field>Monitoring_Required__c</field>
            <operation>equals</operation>
            <value>SOP</value>
        </filters>
        <label>SOP Reportable Easements</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TNC_Managed</fullName>
        <columns>Property_Interest_Group__c</columns>
        <columns>NAME</columns>
        <columns>Ownership_Status__c</columns>
        <columns>County_Global__c</columns>
        <columns>Tract_Acres__c</columns>
        <columns>TNC_Interest_Book_Value__c</columns>
        <columns>Interest_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Property_Interest__c.TNC_Managed</value>
        </filters>
        <label>TNC Managed</label>
        <sharedTo>
            <group>California_Program</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Property Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Interests</pluralLabel>
    <recordTypes>
        <fullName>Deed_Restriction</fullName>
        <active>true</active>
        <description>Deed Restrictions on Property Owned by 3rd Party</description>
        <label>Deed Restriction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Easement</fullName>
        <active>true</active>
        <description>Easement</description>
        <label>Easement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fee</fullName>
        <active>true</active>
        <description>Property owned in fee</description>
        <label>Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mineral</fullName>
        <active>true</active>
        <description>Mineral Rights</description>
        <label>Mineral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Rights</fullName>
        <active>true</active>
        <description>Other types of rights such as water, mineral, carbon, etc.</description>
        <label>Other Rights</label>
    </recordTypes>
    <recordTypes>
        <fullName>TNC_Managed</fullName>
        <active>true</active>
        <description>TNC Managed property that is not TNC owned.</description>
        <label>TNC Managed</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Easements_belong_in_Partial_Interest_PMU</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &apos;Easement&apos;,
 ISPICKVAL(Ownership_Status__c,&apos;TNC Held Easement or Deed Restriction&apos;),
  Property_Interest_Group__r.RecordType.Name  &lt;&gt; &apos;Partial Interests&apos;)</errorConditionFormula>
        <errorDisplayField>Property_Interest_Group__c</errorDisplayField>
        <errorMessage>Easements should be added only to Property Interest Groups of type &quot;Partial Interests.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fees_belong_in_Fee_PMUs</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name = &quot;Fee&quot;,  Property_Interest_Group__r.RecordType.Name  &lt;&gt; &quot;Fee&quot;,
 ISPICKVAL(Ownership_Status__c,&quot;TNC Owned Fee&quot;))</errorConditionFormula>
        <errorMessage>Fee property interests should be added only to Fee Property Interest Groups or Property Management Units.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_Subdivision_Cannot_exceed_permit</fullName>
        <active>true</active>
        <description>The number of subdivisions cannot exceed the number permitted.</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Easement&apos;, 
      Number_Subdivisions__c  &gt;  Number_Subdivisions_Permitted__c )</errorConditionFormula>
        <errorDisplayField>Number_Subdivisions__c</errorDisplayField>
        <errorMessage>The number of subdivisions cannot exceed the number of subdivisions permitted.</errorMessage>
    </validationRules>
</CustomObject>